test/should-fail/vsgc892b.f3
/*
 * @test/compile-error
 */

import java.lang.*;
var x = [12,1];
System.out.println(x instanceof Integer[]);
